@@ -859,6 +859,16 @@ TkFocusDeadWindow(
 	}
     }
 
+    /*
+     * Occasionally, things can become unsynchronized. Move them back into
+     * synch now. [Bug 2496114]
+     */
+
+    if (displayFocusPtr->focusWinPtr == winPtr) {
+	DEBUG(dispPtr, ("focus cleared after %s died\n", winPtr->pathName));
+	displayFocusPtr->focusWinPtr = NULL;
+    }
+
     if (displayFocusPtr->focusOnMapPtr == winPtr) {
 	displayFocusPtr->focusOnMapPtr = NULL;
     }
